# html2pdf-rust

./: .dockerignore  .gitignore  AGENTS.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LAYOUT_IMPROVEMENTS.md  PRINTCSS_FEATURES.md  PROGRESS_REPORTING.md  PROJECT_PLAN.md  README.md  TEST_COVERAGE_PLAN.md
.github/workflows/: ci.yml  release.yml  test.yml
benches/: css_parsing.rs  end_to_end.rs  html_parsing.rs  pdf_generation.rs
docs/: API_GUIDE.md  CSS_SUPPORT.md  PRINTCSS_GUIDE.md  USER_GUIDE.md
examples/: README.md  basic.html  basic.rs  complete_example.rs  complex-layout.html  expanded_css_properties.html  form_example.html  from_url.rs  invoice.html  printcss.html  printcss.rs  progress_reporting.rs  test_comprehensive.html  test_flexbox.html  test_floats.html  test_margin_collapsing.html  test_positioning.html  test_text_layout.html
scripts/: benchmark.sh  install.ps1  install.sh  package.sh  run_tests.sh
src/: cli.rs  error.rs  lib.rs  lib.rs.bak  main.rs  progress.rs  types.rs
src/cache/: config.rs  disk.rs  http.rs  memory.rs  mod.rs  resource.rs  types.rs
src/css/: _values.rs  at_rules.rs  mod.rs  parser.rs  selectors.rs  tokenizer.rs  values.rs
src/font/: loader.rs  mod.rs  system.rs
src/html/: dom.rs  mod.rs  tokenizer.rs  tree_builder.rs
src/layout/: box_model.rs  flex.rs  flow.rs  form.rs  grid.rs  mod.rs  style.rs  table.rs  text.rs
src/pdf/: font.rs  image.rs  mod.rs  object.rs  print_css.rs  print_css_tests.rs  stream.rs  writer.rs
src/script/: mod.rs
src/svg/: mod.rs  parser.rs  path.rs  render.rs  style.rs  tests.rs  transform.rs
target.bak/: .rustc_info.json
target.bak/debug/.fingerprint/adler2-91c0ab508e612316/: lib-adler2  lib-adler2.json
target.bak/debug/.fingerprint/anstream-844675e00c4b0612/: lib-anstream  lib-anstream.json
target.bak/debug/.fingerprint/anstyle-1808efb267e49055/: lib-anstyle  lib-anstyle.json
target.bak/debug/.fingerprint/anstyle-parse-a95bf7259265962c/: lib-anstyle_parse  lib-anstyle_parse.json
target.bak/debug/.fingerprint/anstyle-query-03151ea01a4e231d/: lib-anstyle_query  lib-anstyle_query.json
target.bak/debug/.fingerprint/autocfg-ef059e3456c517aa/: lib-autocfg  lib-autocfg.json
target.bak/debug/.fingerprint/bitflags-59d5eae4f464c703/: lib-bitflags  lib-bitflags.json
target.bak/debug/.fingerprint/cfg-if-923a5f6d1c4f3de6/: lib-cfg_if  lib-cfg_if.json
target.bak/debug/.fingerprint/colorchoice-02c807898f280d62/: lib-colorchoice  lib-colorchoice.json
target.bak/debug/.fingerprint/crc32fast-01cdbfe5f2dac2f9/: build-script-build-script-build  build-script-build-script-build.json
target.bak/debug/.fingerprint/crc32fast-3d44998597346f96/: run-build-script-build-script-build  run-build-script-build-script-build.json
target.bak/debug/.fingerprint/crc32fast-8960565062287371/: lib-crc32fast  lib-crc32fast.json
target.bak/debug/.fingerprint/crossbeam-epoch-8fabef4090b5ce77/: lib-crossbeam_epoch  lib-crossbeam_epoch.json
target.bak/debug/.fingerprint/crossbeam-utils-064877ebdca305f9/: lib-crossbeam_utils  lib-crossbeam_utils.json
target.bak/debug/.fingerprint/crossbeam-utils-59c122d67aab665a/: build-script-build-script-build  build-script-build-script-build.json
target.bak/debug/.fingerprint/crossbeam-utils-a9e747187fc65dc4/: run-build-script-build-script-build  run-build-script-build-script-build.json
target.bak/debug/.fingerprint/fdeflate-58b3ed9d0dffa292/: lib-fdeflate  lib-fdeflate.json
tests/: css_tests.rs  form_elements.rs  html5lib_tests.rs  integration_tests.rs  layout_tests.rs
tests/common/: mod.rs
tests/fixtures/: complex_layout.html  css_test.html  printcss_test.html  simple.html
(+48 files in other folders)
