[package]
name = "html2pdf"
version = "0.1.0"
edition = "2021"
authors = ["HTML2PDF Contributors <html2pdf@example.com>"]
description = "A from-scratch Rust HTML to PDF converter with W3C PrintCSS support"
license = "MIT OR Apache-2.0"
keywords = ["html", "pdf", "printcss", "paged-media", "layout"]
categories = ["command-line-utilities", "graphics", "encoding"]
rust-version = "1.75"
repository = "https://github.com/yourusername/html2pdf-rs"
homepage = "https://github.com/yourusername/html2pdf-rs"
documentation = "https://docs.rs/html2pdf"
readme = "README.md"
include = [
    "/src/**/*",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE*",
    "/CHANGELOG.md",
    "/examples/**/*",
]

[[bin]]
name = "html2pdf"
path = "src/main.rs"

[lib]
name = "html2pdf"
path = "src/lib.rs"

[dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI parsing
clap = { version = "4.4", features = ["derive", "cargo", "wrap_help"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Image decoding for embedded images
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif"] }

# Font parsing
ttf-parser = "0.20"

# Unicode handling
unicode-width = "0.1"
unicode-bidi = "0.3"

# Miniz compression for PDF streams
miniz_oxide = "0.7"

# Optional: Enable for async runtime (future expansion)
# tokio = { version = "1.0", features = ["rt-multi-thread"], optional = true }

[features]
default = []
# async = ["tokio"]  # Future async support

[dev-dependencies]
# Temporary files for testing
tempfile = "3.9"

# Snapshot testing for PDF output comparison
insta = { version = "1.34", features = ["yaml"] }

# Property-based testing
proptest = "1.4"

# Criterion for benchmarks
criterion = { version = "0.5", features = ["html_reports"] }

# Pretty assertions for better test output
pretty_assertions = "1.4"

# Approximate floating point comparisons
approx = "0.5"

# Serde for test data serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Testing utilities
assert_cmd = "2.0"
predicates = "3.1"

# Test profile - optimized for test speed while keeping debug assertions
[profile.test]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 16

# Bench profile - optimized for benchmarks
[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1

# Coverage profile - for code coverage analysis
[profile.coverage]
inherits = "test"
opt-level = 0
debug = true
incremental = true

# Release profile - maximum performance optimizations
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

# Size-optimized release profile for smaller binaries
[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1

[[bench]]
name = "html_parsing"
harness = false

[workspace]
members = ["."]

# Metadata for crates.io
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-machete]
ignored = ["tracing-subscriber"]

# Release metadata for cargo-release
[package.metadata.release]
pre-release-hook = ["git", "cliff", "--output", "CHANGELOG.md"]
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "## Unreleased", replace = "## [{{version}}] - {{date}}" },
    { file = "README.md", search = "html2pdf = \"[0-9.]+\"", replace = 'html2pdf = "{{version}}"' },
]
